# simple-slurm-server

./: .gitignore  README.md  main.py  pyproject.toml  slurm_commands.py  start_server.sh  test.py
src/simple_slurm_server/: slurm_commands.py
